--- a/index.html
+++ b/index.html
@@ -5,9 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Anime List</title>
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://bootswatch.com/5/morph/bootstrap.min.css">
 </head>
 <body>
+    <div class="container mt-4">
+        <H1 class="display-4"><i class="far fa-star text-primary"></i>My<span class="text-primary">Anime</span>List</H1>
+        <form action="" id="anime-form">
+            <div class="anime-group">
+                <label for="title">Title</label>
+                <input type="text" id="title" class="form-control">
+            </div>
+            <div class="anime-group">
+                <label for="studio">Studio</label>
+                <input type="text" id="studio" class="form-control">
+            </div>
+            <input type="submit" value="Add Anime" class="btn btn-primary btn-block mt-3">
+        </form>
+        <table class="table table-striped mt-5">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Studio</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody id="anime-list"></tbody>
+        </table>
+    </div>
 
+
+    <script src="app.js"></script>
+</body>
 </body>
 </html>
