Finished PRoject Working Properly, added Local Storage Functionality

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>My Anime List</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/5/morph/bootstrap.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+        body{
+            font-family: 'Righteous', cursive;
+            font-size: 1.5rem;
+        }
+        </style>
 </head>
 <body>
     <div class="container mt-4">
@@ -20,7 +27,7 @@
                 <label for="studio">Studio</label>
                 <input type="text" id="studio" class="form-control">
             </div>
-            <input type="submit" value="Add Anime" class="btn btn-primary btn-block mt-3">
+            <input type="submit" value="Add Anime" class="btn btn-light btn-block mt-3">
         </form>
         <table class="table table-striped mt-5">
             <thead>
