--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Anime List</title>
+    <title>Your Anime List</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/5/morph/bootstrap.min.css">
     <style>
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="container mt-4">
-        <H1 class="display-4"><i class="far fa-star text-primary"></i>My<span class="text-primary">Anime</span>List</H1>
+        <H1 class="display-4"><i class="far fa-star text-primary"></i>Your<span class="text-primary">Anime</span>List</H1>
         <form action="" id="anime-form">
             <div class="anime-group">
                 <label for="title">Title</label>
